@@ -215,7 +215,7 @@ class Locale(Transform):
                 continue
             parser.parse(msgstr, patch)
             patch = patch[0]
-            #XXX doctest and other block markup
+            # XXX doctest and other block markup
             if not isinstance(patch, nodes.paragraph):
                 continue # skip for now
             for child in patch.children: # update leaves
