@@ -51,6 +51,9 @@ Release 1.1 (in development)
 
 * #553: Added :rst:dir:`testcleanup` blocks in the doctest extension.
 
+* #209: Added :confval:`text_newlines` and :confval:`text_sectionchars`
+  config values.
+
 
 Release 1.0.6 (in development)
 ==============================
